<resources>
    <string name="app_name">First app</string>
    <string name="edit_text">Введите текст сообщения</string>
    <string name="edit_text2">Введите текст персонального имени</string>
    <string name="edit_text3">Введите номер телефона</string>
    <string name="edit_text4">Введите цифры</string>
    <string name="edit_text5">Введите пароль</string>
    <string name="edit_text6">Введите электронную почту</string>
    <string name="button_text">Применить изменения</string>
    <string name="switch_text">Поменять цвет кнопки</string>
    <string name="check_box_text">Скрыть текстовое поле</string>
    <string name="toggle_on">Показать картинку</string>
    <string name="toggle_off">Скрыть картинку</string>
</resources>