<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_margin="@dimen/margin"
            android:src="@drawable/man" />

        <EditText
            android:id="@+id/edit_text1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:hint="@string/edit_text"
            android:textColorHint="@color/white"
            android:layout_margin="@dimen/margin"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:theme="@style/Switch"
            android:text="@string/switch_text"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:textColor="@color/button_color"
            android:theme="@style/Switch"
            android:text="@string/check_box_text" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_off"
            android:textOn="@string/toggle_on"
            android:background="@drawable/toggle_selector"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height"
            android:layout_margin="@dimen/margin"
            android:textColor="@color/white"
            android:background="@color/additional_color"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/button_color"
            android:text="@string/button_text"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>